Criando a Home FXML, CSS e Controller. Add wallpaper .png